<resources>
    <string name="app_name">Asystent nauczyciela</string>

    <string name="button_add_subject">Dodaj przedmiot</string>

    <string name="add_subject_fragment">Dodawanie przedmiotu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subjects">Przedmioty</string>
    <string name="students">Studenci</string>
    <string name="settings">Ustawienia</string>
    <string name="ocena">Ocena</string>
    <string name="notatka">Notatka</string>
    <string name="dodaj_grup_ocen">Dodaj grupę ocen</string>
    <string name="nazwa">Nazwa</string>
    <string name="waga">Waga</string>
    <string name="dodaj_studenta">Dodaj studenta</string>
    <string name="godzina">Godzina:</string>
    <string name="dzie">Dzień</string>
    <string name="kiedy_dzie">Kiedy (dzień)</string>
    <string name="space">-</string>
    <string name="nazwa_przedmiotu">Nazwa przedmiotu</string>
    <string name="imi">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="numer_albumu">Numer albumu</string>
    <string name="edycja_przedmiotu">Edycja przedmiotu</string>
    <string name="zapisz">Zapisz</string>
    <string name="usu_baz_danych">Usuń Bazę Danych</string>
    <string name="usu_przedmioty">Usuń Przedmioty</string>
    <string name="usu_oceny">Usuń Oceny</string>
    <string name="usu_student_w">USuń studentów</string>
    <string name="wy_lij_raport">Wyślij raport</string>
    <string name="studenci">Studenci:</string>
    <string name="edytuj_oceny">Edytuj oceny</string>
    <string name="image">image</string>
</resources>